--- a/module/Application/view/partial/header.phtml
+++ b/module/Application/view/partial/header.phtml
@@ -35,7 +35,7 @@
                 </button>
                 <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('front/img/logo.png') ?>" alt="Hr Consultancy"/>&nbsp;<?php echo $this->translate('') ?></a>
             </div>
-            <div class="collapse navbar-collapse navbar-right">
+            <div class="navbar-collapse collapse navbar-right">
                 <?php // <-- Update this !!
                     echo $this->navigation('left')
                         ->menu()
