--- a/module/Application/view/partial/footer.phtml
+++ b/module/Application/view/partial/footer.phtml
@@ -1,13 +1,13 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <div data-wow-delay="600ms" data-wow-duration="1000ms" class="media contact-info wow fadeInDown animated" style="visibility: visible; animation-duration: 1000ms; animation-delay: 600ms; animation-name: fadeInDown; background: url('<?php echo $this->basePath('front/img/contact.png') ?>') no-repeat scroll 90% 0;">
+            <div data-wow-delay="600ms" data-wow-duration="1000ms" class="media contact-info wow fadeInDown animated" style="visibility: visible; animation-duration: 1000ms; animation-delay: 600ms; animation-name: fadeInDown; background: url('<?php echo $this->basePath('front/img/contact.png') ?>') no-repeat scroll 100% 0;">
                 <div class="pull-left">
                     <i class="fa fa-phone"></i>
                 </div>
                 <div class="media-body col-md-7">
                     <h2>Have a question or need a custom quote?</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation +91 9835 565 108</p>
+                    <p>We would like to respond your queries that you may have. You can mail you queries or contact us <a href="mailto:support@goyalhr.com"><i class="fa fa-envelope icon"></i> support@goyalhr.com</a> or <i class="fa fa-phone-square icon"></i> or <i class="fa fa-whatsapp icon"></i>&nbsp;+91 9835 565 108.</p>
                 </div>
             </div>
         </div>
