--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -485,3 +485,14 @@ background: #428bca;
     color: #000;
     margin-top: 0;
 }
+
+.contact-info i.icon {
+     background: #000 none repeat scroll center top;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 12px;
+    height: 20px;
+    line-height: 20px;
+    text-align: center;
+    width: 20px;
+}
