Associate login employer and employee addition.
Signed-off-by: Roshan <roshanbhgt@gmail.com>

--- a/module/Application/view/template/index/index.phtml
+++ b/module/Application/view/template/index/index.phtml
@@ -157,7 +157,7 @@
                         <div class="item active">
                             <div class="row">
                                 <div class="col-xs-4 col-sm-4 col-md-4">
-                                    <a href="http://dotstrap.com/"> <img src="http://placehold.it/75x75" class="thumbnail"
+                                    <a href="javascript::void(0);"> <img src="/media/company/job.png" class="thumbnail"
                                         alt="Image" /></a>
                                 </div>
                                 <div class="col-xs-7 col-sm-7 col-md-7">
@@ -171,7 +171,7 @@
                         <div class="item ">
                             <div class="row">
                                 <div class="col-xs-4 col-sm-4 col-md-4">
-                                    <a href="http://dotstrap.com/"> <img src="http://placehold.it/75x75" class="thumbnail"
+                                    <a href="javascript::void(0);"> <img src="/media/company/job.png" class="thumbnail"
                                         alt="Image" /></a>
                                 </div>
                                 <div class="col-xs-7 col-sm-7 col-md-7">
@@ -185,7 +185,7 @@
                         <div class="item ">
                             <div class="row">
                               <div class="col-xs-4 col-sm-4 col-md-4">
-                                    <a href="http://dotstrap.com/"> <img src="http://placehold.it/75x75" class="thumbnail"
+                                    <a href="javascript::void(0);"> <img src="/media/company/job.png" class="thumbnail"
                                         alt="Image" /></a>
                                 </div>
                                 <div class="col-xs-7 col-sm-7 col-md-7">
@@ -226,22 +226,22 @@
 
                     <div class="item active">
                             <div class="row">
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
                             </div><!--.row-->
                     </div><!--.item-->
                     <div class="item">
                             <div class="row">
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
-                                <div class="col-md-2"><a href="#" class="thumbnail"><img src="http://placehold.it/140x140" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
+                                <div class="col-md-2"><a href="javascript::void(0);" class="thumbnail"><img src="/media/company/brand.png" alt="Image" style="max-width:100%;"></a></div>
                             </div><!--.row-->
                     </div><!--.item-->
 
