--- a/module/Associate/view/sidebar/employee.phtml
+++ b/module/Associate/view/sidebar/employee.phtml
@@ -2,7 +2,7 @@
     use Zend\Session\Container;
     
     // Store data in session
-    $user = new Container('user');
+    $user = new Container('associate');
 ?>
 <div class="profile-sidebar">
 <!-- SIDEBAR USERPIC -->
