--- a/module/Associate/view/template/employer/edit.phtml
+++ b/module/Associate/view/template/employer/edit.phtml
@@ -1,63 +1,34 @@
-<?php 
-$industry = array(
-    "Accessories/Apparel/Fashion Design", "Accounting/Consulting/Taxation", "Advertising/Event Management/PR", "Agriculture/Dairy Technology", "Airlines/Hotel/Hospitality/Travel/Tourism/Restaurants", "Animation / Gaming", "Architectural Services/ Interior Designing", "Auto Ancillary/Automobiles/Components", "Banking/Financial Services/Stockbroking/Securities", "Banking/FinancialServices/Broking", "Biotechnology/Pharmaceutical/Clinical Research", "Brewery/Distillery", "Cement/Construction/Engineering/Metals/Steel/Iron", "Ceramics/Sanitaryware", "Chemicals/Petro Chemicals/Plastics", "Computer Hardware/Networking", "Consumer FMCG/Foods/Beverages", "Consumer Goods - Durables", "Courier/Freight/Transportation/Warehousing", "CRM/ IT Enabled Services/BPO", "Education/Training/Teaching", "Electricals/Switchgears", "Employment Firms/Recruitment Services Firms", "Entertainment/Media/Publishing/Dotcom", "Export Houses/Textiles/Merchandise", "Facility Management", "Fertilizers/Pesticides", "FoodProcessing", "Gems and Jewellery", "Glass", "Government/Defence", "Healthcare/Medicine", "HeatVentilation/AirConditioning", "Insurance", "KPO/Research/Analytics", "Law/Legal Firms", "Machinery/Equipment Manufacturing/Industrial Products", "Mining", "NGO/Social Services", "Office Automation", "Others/Engg. Services/Service Providers", "Petroleum/Oil and Gas/Projects/Infrastructure/Power/Non-conventional Energy", "Printing/Packaging", "Publishing", "Real Estate", "Retailing", "Security/Law Enforcement", "Shipping/Marine", "Software Services", "Steel", "Strategy/Management Consulting Firms", "Telecom Equipment/Electronics/Electronic Devices/RF/Mobile Network/Semi-conductor", "Telecom/ISP", "Tyres", "Water Treatment/Waste Management", "Wellness/Fitness/Sports"
-        );
-?>
 <div class="row">
     <div class="panel-heading">
-        <div class="panel-title">Editing <b><?php echo $company->companyname; ?></b></div>
+        <div class="panel-title">Editing <b><?php echo $company->company; ?></b></div>
     </div>
     <div class="panel-body">
         <form id="signupform" class="form-horizontal" role="form"
-              action="<?php echo $this->serverUrl($this->url('employer', array('action'=>'update'))); ?>" method="post">
+              action="<?php echo $this->serverUrl($this->url('company', array('action'=>'update'))); ?>" method="post">
             <input type="hidden" name="id" value="<?php echo $company->id; ?>" />            
-            <input type="hidden" name="userid" value="<?php echo $company->userid; ?>" />            
+            <input type="hidden" name="assoc_id" value="<?php echo $company->assoc_id; ?>" />            
             <div class="form-group">
-                <label for="conf-password" class="col-md-3 control-label">Company Name</label>
+                <label for="conf-password" class="col-md-3 control-label">Company</label>
                 <div class="col-md-6">
-                    <input type="text" class="form-control" name="companyname" placeholder="Company Name" value="<?php echo $company->companyname; ?>">
+                    <input type="text" class="form-control" name="company" placeholder="Company" value="<?php echo $company->company; ?>">
                 </div>
             </div>
             <div class="form-group">
-                <label for="conf-password" class="col-md-3 control-label">Description</label>
+                <label for="conf-password" class="col-md-3 control-label">Contact Firstname</label>
                 <div class="col-md-6">
-                    <textarea name="description" class="form-control" placeholder="Description"><?php echo $company->description; ?></textarea>
+                    <input type="text" class="form-control" name="firstname" placeholder="Firstname" value="<?php echo $company->firstname; ?>">
                 </div>
             </div>
             <div class="form-group">
-                <label for="url" class="col-md-3 control-label">Company Web Site</label>
+                <label for="conf-password" class="col-md-3 control-label">Contact Lastname</label>
                 <div class="col-md-6">
-                    <input type="text" class="form-control" name="url" placeholder="Url" value="<?php echo $company->url; ?>">
+                    <input type="text" class="form-control" name="lastname" placeholder="Lastname" value="<?php echo $company->lastname; ?>">
                 </div>
             </div>
             <div class="form-group">
-                <label for="companytype" class="col-md-3 control-label">Company Type</label>
-
+                <label for="conf-password" class="col-md-3 control-label">Email</label>
                 <div class="col-md-6">
-                    <div class="radio">
-                        <label><input type="radio" name="companytype" value="company" <?php if(strtolower($company->companytype) == 'company'){ ?> checked="true" <?php } ?> >Company</label>
-                    </div>
-                    <div class="radio">
-                        <label><input type="radio" name="companytype" value="consultant" <?php if(strtolower($company->companytype) == 'consultant'){ ?> checked="true" <?php } ?> >Consultant</label>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="industrytpe" class="col-md-3 control-label">Industry Type</label>
-                
-                <div class="col-md-6">
-                    <select name="industrytype" class="form-control">
-                        <option value="-1" selected="selected">- Select an Industry -</option>
-                        <?php 
-                            $i = 1; 
-                            foreach($industry as $val) { 
-                        ?>
-                        <option value="<?php echo $i; ?>" <?php if($company->industrytype == $i){ ?> selected="selected" <?php } ?>><?php echo $val; ?></option>
-                        <?php
-                                $i++;
-                            } 
-                        ?>
-                    </select>
+                    <input type="text" class="form-control" name="email" placeholder="Lastname" value="<?php echo $company->email; ?>">
                 </div>
             </div>
             <div class="form-group">
@@ -72,12 +43,6 @@ $industry = array(
 
                 <div class="col-md-6">
                     <input type="text" class="form-control" name="address2" placeholder="Address Line 2" value="<?php echo $company->address2 ; ?>">
-                </div>
-            </div><div class="form-group">
-                <label for="address3" class="col-md-3 control-label">Address Line 3</label>
-
-                <div class="col-md-6">
-                    <input type="text" class="form-control" name="address3" placeholder="Address Line 3" value="<?php echo $company->address3 ; ?>">
                 </div>
             </div>
             <div class="form-group">
@@ -116,10 +81,10 @@ $industry = array(
                 </div>
             </div>
             <div class="form-group">
-                <label for="telephone" class="col-md-3 control-label">Contact Number</label>
+                <label for="telephone" class="col-md-3 control-label">Phone</label>
 
                 <div class="col-md-6">
-                    <input type="text" class="form-control" name="contactnumber" placeholder="Telephone" value="<?php echo $company->contactnumber ; ?>">
+                    <input type="text" class="form-control" name="phone" placeholder="Telephone" value="<?php echo $company->phone ; ?>">
                 </div>
             </div>
             <div class="form-group">
