--- a/module/Application/view/partial/footer.phtml
+++ b/module/Application/view/partial/footer.phtml
@@ -1,3 +1,4 @@
+<a href="javascript::void(0);" class="scrollup"></a>
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
@@ -33,5 +34,23 @@
         </div>
     </div>
 </footer>
+<script type="text/javascript">
+    $(document).ready(function(){ 
+ 
+        $(window).scroll(function(){
+            if ($(this).scrollTop() > 100) {
+                $('.scrollup').fadeIn();
+            } else {
+                $('.scrollup').fadeOut();
+            }
+        }); 
+ 
+        $('.scrollup').click(function(){
+            $("html, body").animate({ scrollTop: 0 }, 600);
+            return false;
+        });
+ 
+    });
+</script>
 
 
