--- a/module/Associate/view/template/employer/changepass.phtml
+++ b/module/Associate/view/template/employer/changepass.phtml
@@ -1,30 +1,9 @@
 <div class="row">
     <div class="col-md-9">
-        <h1 class="page-title">Edit account information</h1>
+        <h1 class="page-title">Update your password</h1>
         <div class="page-body">
-            <form class="form-horizontal" role="form" method="post" action="<?php echo $this->serverUrl($this->url('employer', array('action'=>'changepass'))); ?>">
+            <form class="form-horizontal" role="form" method="post" action="<?php echo $this->serverUrl($this->url('company', array('action'=>'changepass'))); ?>">
                 <input type="hidden" name="id" value="<?php echo $id; ?>" />
-                <div class="form-group">
-                    <label for="firstname" class="col-md-3 control-label">First Name</label>
-
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" name="firstname" placeholder="First Name" value="<?php echo $user->firstname ?>">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="lastname" class="col-md-3 control-label">Last Name</label>
-
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" name="lastname" placeholder="Last Name" value="<?php echo $user->lastname ?>">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="email" class="col-md-3 control-label">Email</label>
-
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" name="email" placeholder="Email Address" value="<?php echo $user->email ?>">
-                    </div>
-                </div>
                 <div class="form-group">
                     <label for="password" class="col-md-3 control-label">New Password</label>
                     <div class="col-md-5">
