--- a/module/Associate/view/template/employer/dashboard.phtml
+++ b/module/Associate/view/template/employer/dashboard.phtml
@@ -67,25 +67,18 @@
 	});
     }
     
-    
 </script>
 <div class="row">
     <div class="col-md-12">
         <div class="col-md-9">
             <div class="span4">
                 <blockquote>
-                    <p>Welcome <?php echo $company->companyname; ?>!</p>
-                    <small><cite title="Source Title"><?php echo $company->state.', '.$company->country; ?>  <i class="glyphicon glyphicon-map-marker"></i></cite></small>
+                    <p>Welcome <?php echo $employer->company; ?>!</p>
                 </blockquote>
                 <p>
-                    <i class="glyphicon glyphicon-envelope"></i> <?php echo $user->email; ?> <br>
-                    <i class="glyphicon glyphicon-globe"></i> <?php echo $company->url; ?> <br>
-                    <i class="glyphicon glyphicon-time"></i> Since <?php echo $this->dateFormat(new DateTime($user->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); ?>
+                    <i class="glyphicon glyphicon-envelope"></i> <?php echo $employer->email; ?> <br>
+                    <i class="glyphicon glyphicon-time"></i> Since <?php echo $this->dateFormat(new DateTime($associate->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); ?>
                 </p>
-            </div>
-            <div class="row">
-                <a id="editdesc" href="javascript:void(0)" onclick="getupdatedetailform();"><i class="glyphicon glyphicon-edit"></i></a>
-                <div id="descriptionshow"><?php echo $company->description; ?></div>
             </div>
         </div>
     </div>
